### 24-Jun-2020 - MDD - Version 3.5.1
    - Replaced/modified routines based upon copyright numerical recipes routines.
      Updates implemented Oct 2019, but installation delayed for higher priority updates.

### 14-Oct-2018 - JAN/MDD  Version 3.5.0
    - Bug fixes to the CTE correction to fix out of bounds memory access and remove unnecessary critical section.

### 19-Jan-2018 - JAN/MDD - Version 3.4.2
    - A number of code robustness improvements (address memory leaks, fix detected bugs) were implemented.

### 10-Apr-2016 - MLS - Version 3.4.1
    - Fixed missed init for header vars in cte code

### 02-Apr-2016 - MLS - Version 3.4.1
    - Fixed logic brackets in subarray prescan bias call which didn't explicitly do the gain correction in the if loop, see Issue #55
    - Fixed double statement, see Issue #63

### 27-Mar-2017 - MLS - Version 3.4.1
    - Update photometry keyword descriptions in UVIS

### 28-Sep-2016 - MLS - Version 3.4
    - Fixed memory allocation around one more print

### 26-Sep-2016 - MLS - Version 3.4
    - Fixed memory allocation around prints

### 20-Sep-2016 - MLS - Version 3.4
    - Moved the init for the CTE params back to the top of the code, it had gotten moved below the header update for the information

### 14-Sep-2016 - MLS - Version 3.4
    - CTE subarrays enabled for user supported subarrays with physical overscan

### 06-Sep-2016 - MLS - Version 3.4
    - Sink pixel flagging for subarray appears correct now

### 18-July-2016 - MLS - Version 3.4
    - CTE and Sink Pixel implementation for subarrays submitted by Brechmos for review

### 28-Jan-2016 - MLS -- Version 3.3
    - Removed the call to WF3Dth for the CTE data. This is essentially useless since the DTH step has been replaced with astrodrizzle, the only function it has it to concatina
te the SPT files from the association members into a new spt file with the product/subproduct name. This is already done for the non-cte processed data, there is no difference