@@ -1,3 +1,9 @@
+### 12-Aug-2020 - MDD - Version 3.5.2
+    - Added MJD as a parameterized variable for the PHOTMODE keyword to
+      enable a time-dependent photometric correction for the UVIS only.
+    - Fixed a bug in the IMPHTTAB package to support properly data with 
+      multiple imsets, in conjunction with a parameterized value.
+
 ### 24-Jun-2020 - MDD - Version 3.5.1
     - Replaced/modified routines based upon copyright numerical recipes routines.
       Updates implemented Oct 2019, but installation delayed for higher priority updates.
